Nueva actualizacion, register funciona

--- a/PlataformaDisco/public/addSong.html
+++ b/PlataformaDisco/public/addSong.html
@@ -71,7 +71,7 @@
           />
         </label>
         <button type="submit" class="submit" id="addCancion">Agregar cancion</button>
-        <button type="submit" class="submit" id="cancelar">Cancelar</button>
+        <button type="button" class="submit" id="cancelar">Cancelar</button>
       </form>
     </div>
     <script src="scripts/valueForm.js"></script>
