--- a/PlataformaDisco/public/addalbum.html
+++ b/PlataformaDisco/public/addalbum.html
@@ -81,7 +81,7 @@
           />
         </label>
         <button type="submit" class="submit" id="btnAdd">Agregar Album</button>
-        <button type="submit" class="submit" id="cancelar">Cancelar</button>
+        <button type="button" class="submit" id="cancelar">Cancelar</button>
       </form>
     </div>
     
