--- a/PlataformaDisco/public/logIn.html
+++ b/PlataformaDisco/public/logIn.html
@@ -33,6 +33,7 @@
             placeholder="Email"
             maxlength="40"
             class="input"
+            id="email"
           />
         </label>
         <label
@@ -44,9 +45,10 @@
             minlength="6"
             maxlength="10"
             class="input"
+            id="contrasena"
           />
         </label>
-        <button type="submit" class="submit">Inicia Sesión</button>
+        <button type="submit" class="submit" id="iniciar">Inicia Sesión</button>
         <p class="signin">
           ¿Todavia no te registraste? <a href="singUp.html">Registrate aqui!</a>
         </p>
