--- a/PlataformaDisco/public/singUp.html
+++ b/PlataformaDisco/public/singUp.html
@@ -36,6 +36,7 @@
               placeholder="Nombre"
               maxlength="40"
               class="input"
+              id="nombre"
             />
           </label>
           <label
@@ -46,6 +47,7 @@
               placeholder="Apellido"
               maxlength="20"
               class="input"
+              id="apellido"
             />
           </label>
           <label
@@ -56,6 +58,7 @@
               placeholder="Email"
               maxlength="50"
               class="input"
+              id="email"
             />
           </label>
           <label
@@ -66,14 +69,15 @@
               placeholder="Password"
               maxlength="10"
               class="input"
+              id="contrasena"
             />
           </label>
-          <button type="submit" class="submit">Registrarse</button>
-          <button type="submit" class="submit" id="cancelar">Cancelar</button>
+          <button type="submit" class="submit" id="btnReg">Registrarse</button>
+          <button type="button" class="submit" id="cancelar">Cancelar</button>
         </form>
       </div>
-      <script src="scripts/singUp.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+      <script src="scripts/register.js"></script>
     </body>
   </html>
 
