--- a/PlataformaDisco/public/addalbum.html
+++ b/PlataformaDisco/public/addalbum.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="singUp">
-      <form action="" method="post" class="form">
+      <form action=""  class="form">
         <p class="title">Agrega un Album!</p>
         <label
           >Titulo
