Actualizacion de proyecto, nuevo intento para deploy!

--- a/PlataformaDisco/public/tours.html
+++ b/PlataformaDisco/public/tours.html
@@ -38,22 +38,10 @@
       </div>
       <div class="menu">
         <div class="section">
-          <a href="index.html"> Volver al Inicio </a>
+          <a href="#" id="indexLink"> Volver al Inicio </a>
         </div>
         <div class="section">
-          <a href="index.html"> Más Albunes </a>
-        </div>
-        <div class="section">
-          <a href="addalbum.html"> Agrega albunes </a>
-        </div>
-        <div class="section">
-          <a href="editAlbum.html"> Editar album </a>
-        </div>
-        <div class="section">
-          <a href="logIn.html"> Iniciar Sesion </a>
-        </div>
-        <div class="section">
-          <a href="logIn.html"> Log out </a>
+          <a href="#" id="masAlbumesLink"> Más Albunes </a>
         </div>
       </div>
     </div>
@@ -92,7 +80,7 @@
         <button class="buy" lugar="Montevideo">Comprar entrada</button>
       </div>
     </div>
-    <script src="scripts/tours.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="scripts/tours.js"></script>
   </body>
 </html>
