--- a/PlataformaDisco/public/logIn.html
+++ b/PlataformaDisco/public/logIn.html
@@ -54,7 +54,8 @@
         </p>
       </form>
     </div>
-    <script src="scripts/logIn.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="scripts/logIn.js" type="module"></script>
   </body>
 </html>
