--- a/PlataformaDisco/public/addalbum.html
+++ b/PlataformaDisco/public/addalbum.html
@@ -86,6 +86,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/addAlbum.js"></script>
+    <script src="./scripts/addAlbum.js"></script>
   </body>
 </html>
