--- a/PlataformaDisco/public/album.html
+++ b/PlataformaDisco/public/album.html
@@ -101,7 +101,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="scripts/album.js"></script>
-    <script src="scripts/editAlbum.js"></script>
+    <script src="./scripts/album.js"></script>
+    <script src="./scripts/editAlbum.js"></script>
   </body>
 </html>
