--- a/PlataformaDisco/public/editAlbum.html
+++ b/PlataformaDisco/public/editAlbum.html
@@ -78,7 +78,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/editAlbum.js"></script>
-    <!-- <script src="scripts/valueForm.js"></script> -->
+    <script src="./scripts/editAlbum.js"></script>
   </body>
 </html>
