--- a/PlataformaDisco/public/index.html
+++ b/PlataformaDisco/public/index.html
@@ -86,6 +86,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
