--- a/PlataformaDisco/public/logIn.html
+++ b/PlataformaDisco/public/logIn.html
@@ -56,6 +56,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/logIn.js" type="module"></script>
+    <script src="./scripts/logIn.js" type="module"></script>
   </body>
 </html>
