--- a/PlataformaDisco/public/singUp.html
+++ b/PlataformaDisco/public/singUp.html
@@ -77,7 +77,7 @@
         </form>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-      <script src="scripts/register.js"></script>
+      <script src="./scripts/register.js"></script>
     </body>
   </html>
 
