--- a/PlataformaDisco/public/tours.html
+++ b/PlataformaDisco/public/tours.html
@@ -81,6 +81,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/tours.js"></script>
+    <script src="./scripts/tours.js"></script>
   </body>
 </html>
